Structure of the Codes

--- a/index.html
+++ b/index.html
@@ -22,8 +22,77 @@
             <option value="" selected=""></option>
             <option value="AR">Argentina</option>
             <option value="AO">Angola</option>
-            <option value="AR">Argentina</option>
-            <option value="AR">Argentina</option>
+            <option value="AT">Austria</option>
+            <option value="AU">Australia</option>
+            <option value="AW">Aruba</option>
+            <option value="BE">Belgium</option>
+            <option value="BG">Bulgaria</option>
+            <option value="BO">Bolivia</option>
+            <option value="BR">Brazil</option>
+            <option value="CA">Canada</option>
+            <option value="CH">Switzerland</option>
+            <option value="CN">China</option>
+            <option value="CO">Colombia</option>
+            <option value="CZ">Czech Republic</option>
+            <option value="DE">Germany</option>
+            <option value="DK">Denmark</option>
+            <option value="DO">Dominican Republic</option>
+            <option value="EC">Ecuador</option>
+            <option value="ES">Spain</option>
+            <option value="FI">Finland</option>
+            <option value="FR">France</option>
+            <option value="GB">United Kingdom</option>
+            <option value="GB-ENG">England</option>
+            <option value="GB-NIR">Northern Ireland</option>
+            <option value="GB-SCT">Scotland</option>
+            <option value="GB-WLS">Wales</option>
+            <option value="GR">Greece</option>
+            <option value="GT">Guatemala</option>
+            <option value="HK">Hong Kong</option>
+            <option value="HN">Honduras</option>
+            <option value="HR">Croatia</option>
+            <option value="HU">Hungary</option>
+            <option value="ID">Indonesia</option>
+            <option value="IE">Ireland</option>
+            <option value="IN">India</option>
+            <option value="IL">Israel</option>
+            <option value="IS"> Iceland </option>
+            <option value="IT"> Italy </option>
+            <option value="JP"> Japan </option>
+            <option value="KZ"> Kazakhstan </option>
+            <option value="LS"> Lesotho </option>
+            <option value="LU"> Luxembourg </option>
+            <option value="MG"> Madagascar </option>
+            <option value="MQ"> Martinique </option>
+            <option value="MT"> Malta </option>
+            <option value="MU"> Mauritius </option>
+            <option value="MX"> Mexico </option>
+            <option value="MZ"> Mozambique </option>
+            <option value="NL"> Netherlands </option>
+            <option value="NO"> Norway </option>
+            <option value="PE"> Peru </option>
+            <option value="PK"> Pakistan </option>
+            <option value="PH"> Philippines </option>
+            <option value="PL"> Poland </option>
+            <option value="PR"> Puerto Rico </option>
+            <option value="PT"> Portugal </option>
+            <option value="PY"> Paraguay </option>
+            <option value="RE"> Réunion </option>
+            <option value="RU"> Russia </option>
+            <option value="SC"> Seychelles </option>
+            <option value="SE"> Sweden </option>
+            <option value="SG"> Singapore </option>
+            <option value="SI"> Slovenia </option>
+            <option value="ST"> Sao Tome and Principe </option>
+            <option value="SK"> Slovakia </option>
+            <option value="TN"> Tunisia </option>
+            <option value="TR"> Turkey </option>
+            <option value="UA"> Ukraine </option>
+            <option value="US"> United States </option>
+            <option value="UY"> Uruguay </option>
+            <option value="VE"> Venezuela </option>
+            <option value="ZA"> South Africa </option>
+            <option value="ZW"> Zimbabwe </option>
           </select>
           <button type="submit" class="btn btn-info pull-right">Mostrar</button>
         </form>
