--- a/index.html
+++ b/index.html
@@ -98,31 +98,7 @@
         </form>
       </div>
       <div id="calendar">
-        <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th colspan="7" class="text-center">
-                mes
-              </th>
-            </tr>
-            <tr>
-              <th>Domingo</th>
-              <th>lunes</th>
-              <th>Martes</th>
-              <th>Miercoles</th>
-              <th>Jueves</th>
-              <th>Viernes</th>
-              <th>Sabado</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th>
-                
-              </th>
-            </tr>
-          </tbody>
-        </table>
+        
       </div>
     </div>
     <script
@@ -130,6 +106,6 @@
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
